; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ocs_fc/extr_ocs_cam.c_ocs_del_crn.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ocs_fc/extr_ocs_cam.c_ocs_del_crn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.ocs_lun_crn** }
%struct.ocs_lun_crn = type { i32 }

@OCS_MAX_LUN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ocs_del_crn(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.ocs_lun_crn*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  store %struct.ocs_lun_crn* null, %struct.ocs_lun_crn** %4, align 8
  store i64 0, i64* %3, align 8
  br label %5

5:                                                ; preds = %26, %1
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @OCS_MAX_LUN, align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %29

9:                                                ; preds = %5
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.ocs_lun_crn**, %struct.ocs_lun_crn*** %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds %struct.ocs_lun_crn*, %struct.ocs_lun_crn** %13, i64 %14
  %16 = load %struct.ocs_lun_crn*, %struct.ocs_lun_crn** %15, align 8
  store %struct.ocs_lun_crn* %16, %struct.ocs_lun_crn** %4, align 8
  %17 = load %struct.ocs_lun_crn*, %struct.ocs_lun_crn** %4, align 8
  %18 = icmp ne %struct.ocs_lun_crn* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %9
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = load %struct.ocs_lun_crn*, %struct.ocs_lun_crn** %4, align 8
  %24 = call i32 @ocs_free(i32 %22, %struct.ocs_lun_crn* %23, i32 4)
  br label %25

25:                                               ; preds = %19, %9
  br label %26

26:                                               ; preds = %25
  %27 = load i64, i64* %3, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %3, align 8
  br label %5

29:                                               ; preds = %5
  ret void
}

declare dso_local i32 @ocs_free(i32, %struct.ocs_lun_crn*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
